--- a/app/src/main/res/layout/activity_choosemap.xml
+++ b/app/src/main/res/layout/activity_choosemap.xml
@@ -33,16 +33,26 @@
 
     </ImageView>
     <Button
-        android:layout_width="110dp"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Choose"
+        android:layout_marginBottom="100dp">
+    </Button>
+
+    <Button
+        android:layout_width="75dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Previous"
+        android:text="Back"
         android:layout_marginLeft="30dp"
         android:layout_marginBottom="100dp">
     </Button>
     <Button
-        android:layout_width="110dp"
+        android:layout_width="75dp"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
