--- a/app/src/main/res/layout/activity_choosemap.xml
+++ b/app/src/main/res/layout/activity_choosemap.xml
@@ -47,16 +47,19 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Back"
+        android:text="<"
+        android:textSize="32dp"
         android:layout_marginLeft="30dp"
         android:layout_marginBottom="100dp">
     </Button>
+
     <Button
         android:layout_width="75dp"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Next"
+        android:text=">"
+        android:textSize="32dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="100dp">
     </Button>
