Added ID for each block in createmap xml

--- a/app/src/main/res/layout/activity_createmap.xml
+++ b/app/src/main/res/layout/activity_createmap.xml
@@ -29,151 +29,181 @@
         android:layout_margin="18dp">
 
         <Button
+            android:id="@+id/btn_createmap_00"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_01"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_02"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_03"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_04"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_10"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_11"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_12"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_13"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_14"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_20"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_21"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_22"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_23"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_24"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_30"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_31"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_32"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_33"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_34"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_40"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_41"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_42"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_43"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_44"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_50"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_51"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_52"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_53"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_createmap_54"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
