--- a/app/src/main/res/layout/activity_createmap_popup.xml
+++ b/app/src/main/res/layout/activity_createmap_popup.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="350dp"
-        android:layout_height="220dp"
+        android:layout_height="320dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Choose what tile to place"
+            android:text="Choose what tile to place as head"
             android:textColor="@color/black"/>
 
         <LinearLayout
@@ -29,12 +29,14 @@
             android:gravity="center">
 
             <Button
+                android:id="@+id/btn_createmap_popup_teleporter"
                 android:layout_width="130dp"
                 android:layout_height="60dp"
                 android:text="Teleporter"
                 android:layout_margin="10dp"/>
 
             <Button
+                android:id="@+id/btn_createmap_popup_blackhole"
                 android:layout_width="130dp"
                 android:layout_height="60dp"
                 android:text="Blackhole"
@@ -49,17 +51,35 @@
             android:gravity="center">
 
             <Button
+                android:id="@+id/btn_createmap_popup_immunity"
                 android:layout_width="130dp"
                 android:layout_height="60dp"
                 android:text="Immunity"
                 android:layout_margin="10dp"/>
 
             <Button
+                android:id="@+id/btn_createmap_popup_disabled"
                 android:layout_width="130dp"
                 android:layout_height="60dp"
                 android:text="Disabled"
                 android:layout_margin="10dp"/>
         </LinearLayout>
+
+        <EditText
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            android:gravity="center"
+            android:hint="Coordinate of tail"
+            android:textSize="12dp"
+            android:background="@color/white"
+            android:inputType="numberDecimal"/>
+
+        <Button
+            android:id="@+id/btn_createmap_popup_next"
+            android:layout_width="130dp"
+            android:layout_height="50dp"
+            android:text="Next"
+            android:layout_margin="10dp"/>
     </LinearLayout>
 
 
