--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -14,9 +14,10 @@
         android:layout_margin="10dp">
     </Button>
     <androidx.recyclerview.widget.RecyclerView
+        android:orientation="horizontal"
         android:id="@+id/rv_datalist"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="470dp"
         app:layout_constraintTop_toBottomOf="@id/btn_gameplay_quit"
         >
     </androidx.recyclerview.widget.RecyclerView>
