--- a/app/src/main/res/layout/activity_choosemap.xml
+++ b/app/src/main/res/layout/activity_choosemap.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Button
+        android:id="@+id/btn_choosemap_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
@@ -29,10 +30,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="70dp">
 
     </ImageView>
     <Button
+        android:id="@+id/btn_choosemap_choose"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
