--- a/app/src/main/res/layout/activity_setuppage.xml
+++ b/app/src/main/res/layout/activity_setuppage.xml
@@ -129,6 +129,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/btn_setuppage_play"
         android:layout_width="250dp"
         android:layout_height="80dp"
         app:layout_constraintTop_toBottomOf="@id/ll_setuppage_playerschoice"
