--- a/app/src/main/res/layout/activity_createmap.xml
+++ b/app/src/main/res/layout/activity_createmap.xml
@@ -37,7 +37,7 @@
         android:layout_margin="18dp">
 
         <Button
-            android:id="@+id/btn_createmap_00"
+            android:id="@+id/btn_createmap_29"
             android:tag="29"
             android:layout_height="55dp"
             android:layout_width="55dp"
@@ -45,7 +45,7 @@
             android:text="29"/>
 
         <Button
-            android:id="@+id/btn_createmap_01"
+            android:id="@+id/btn_createmap_28"
             android:tag="28"
             android:layout_height="55dp"
             android:layout_width="55dp"
@@ -53,7 +53,7 @@
             android:text="28"/>
 
         <Button
-            android:id="@+id/btn_createmap_02"
+            android:id="@+id/btn_createmap_27"
             android:tag="27"
             android:text="27"
             android:layout_height="55dp"
@@ -61,7 +61,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_03"
+            android:id="@+id/btn_createmap_26"
             android:tag="26"
             android:text="26"
             android:layout_height="55dp"
@@ -69,7 +69,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_04"
+            android:id="@+id/btn_createmap_25"
             android:tag="25"
             android:text="25"
             android:layout_height="55dp"
@@ -77,7 +77,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_10"
+            android:id="@+id/btn_createmap_20"
             android:tag="20"
             android:text="20"
             android:layout_height="55dp"
@@ -85,7 +85,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_11"
+            android:id="@+id/btn_createmap_21"
             android:tag="21"
             android:text="21"
             android:layout_height="55dp"
@@ -93,7 +93,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_12"
+            android:id="@+id/btn_createmap_22"
             android:tag="22"
             android:text="22"
             android:layout_height="55dp"
@@ -101,7 +101,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_13"
+            android:id="@+id/btn_createmap_23"
             android:tag="23"
             android:text="23"
             android:layout_height="55dp"
@@ -109,7 +109,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_14"
+            android:id="@+id/btn_createmap_24"
             android:tag="24"
             android:text="24"
             android:layout_height="55dp"
@@ -117,7 +117,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_20"
+            android:id="@+id/btn_createmap_19"
             android:tag="19"
             android:text="19"
             android:layout_height="55dp"
@@ -125,7 +125,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_21"
+            android:id="@+id/btn_createmap_18"
             android:tag="18"
             android:text="18"
             android:layout_height="55dp"
@@ -133,7 +133,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_22"
+            android:id="@+id/btn_createmap_17"
             android:tag="17"
             android:text="17"
             android:layout_height="55dp"
@@ -141,7 +141,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_23"
+            android:id="@+id/btn_createmap_16"
             android:tag="16"
             android:text="16"
             android:layout_height="55dp"
@@ -149,7 +149,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_24"
+            android:id="@+id/btn_createmap_15"
             android:tag="15"
             android:text="15"
             android:layout_height="55dp"
@@ -157,7 +157,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_30"
+            android:id="@+id/btn_createmap_10"
             android:tag="10"
             android:text="10"
             android:layout_height="55dp"
@@ -165,7 +165,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_31"
+            android:id="@+id/btn_createmap_11"
             android:tag="11"
             android:text="11"
             android:layout_height="55dp"
@@ -173,7 +173,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_32"
+            android:id="@+id/btn_createmap_12"
             android:tag="12"
             android:text="12"
             android:layout_height="55dp"
@@ -181,7 +181,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_33"
+            android:id="@+id/btn_createmap_13"
             android:tag="13"
             android:text="13"
             android:layout_height="55dp"
@@ -189,7 +189,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_34"
+            android:id="@+id/btn_createmap_14"
             android:tag="14"
             android:text="14"
             android:layout_height="55dp"
@@ -197,7 +197,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_40"
+            android:id="@+id/btn_createmap_9"
             android:tag="9"
             android:text="9"
             android:layout_height="55dp"
@@ -205,7 +205,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_41"
+            android:id="@+id/btn_createmap_8"
             android:tag="8"
             android:text="8"
             android:layout_height="55dp"
@@ -213,7 +213,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_42"
+            android:id="@+id/btn_createmap_7"
             android:tag="7"
             android:text="7"
             android:layout_height="55dp"
@@ -221,7 +221,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_43"
+            android:id="@+id/btn_createmap_6"
             android:tag="6"
             android:text="6"
             android:layout_height="55dp"
@@ -229,7 +229,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_44"
+            android:id="@+id/btn_createmap_5"
             android:tag="5"
             android:text="5"
             android:layout_height="55dp"
@@ -237,7 +237,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_50"
+            android:id="@+id/btn_createmap_0"
             android:tag="0"
             android:text="0"
             android:layout_height="55dp"
@@ -245,15 +245,16 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_51"
+            android:id="@+id/btn_createmap_1"
             android:tag="1"
             android:text="1"
             android:layout_height="55dp"
             android:layout_width="55dp"
             android:layout_margin="10dp"/>
 
+
         <Button
-            android:id="@+id/btn_createmap_52"
+            android:id="@+id/btn_createmap_2"
             android:tag="2"
             android:text="2"
             android:layout_height="55dp"
@@ -261,7 +262,7 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_53"
+            android:id="@+id/btn_createmap_3"
             android:tag="3"
             android:text="3"
             android:layout_height="55dp"
@@ -269,14 +270,27 @@
             android:layout_margin="10dp"/>
 
         <Button
-            android:id="@+id/btn_createmap_54"
-            android:tag="4"
-            android:text="4"
-            android:layout_height="55dp"
+            android:id="@+id/btn_createmap_4"
             android:layout_width="55dp"
-            android:layout_margin="10dp"/>
+            android:layout_height="55dp"
+            android:layout_margin="10dp"
+            android:tag="4"
+            android:text="4" />
 
     </GridLayout>
+
+    <EditText
+        android:id="@+id/et_createmap_nameofmap"
+        app:layout_constraintTop_toBottomOf="@id/gl_createmap_map"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:hint="Name of Map"
+        android:padding="10dp"
+        android:layout_margin="20dp"/>
+
 
     <Button
         android:id="@+id/btn_createmap_back"
@@ -285,7 +299,7 @@
         android:text="Back"
         android:layout_gravity="left"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/gl_createmap_map"
+        app:layout_constraintTop_toBottomOf="@id/et_createmap_nameofmap"
         android:layout_margin="20dp"/>
 
     <Button
@@ -295,7 +309,7 @@
         android:text="Save"
         android:layout_gravity="right"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/gl_createmap_map"
+        app:layout_constraintTop_toBottomOf="@id/et_createmap_nameofmap"
         android:layout_margin="20dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
