--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,68 +11,31 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:text="Back"
-        android:layout_margin="10dp">
+        android:layout_margin="20dp">
     </Button>
 
-    <TextView
-        android:id="@+id/tv_settings_bgm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Background Music"
-        android:textSize="24sp"
+    <LinearLayout
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tv_settings_se">
-    </TextView>
-    <com.google.android.material.slider.Slider
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_settings_bgm"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="10dp">
-
-    </com.google.android.material.slider.Slider>
-    <TextView
-        android:id="@+id/tv_settings_se"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sound Effects"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-    </TextView>
-    <com.google.android.material.slider.Slider
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_settings_se"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="10dp">
+        android:gravity="center"
+        android:orientation="vertical">
 
-    </com.google.android.material.slider.Slider>
-    <TextView
-        android:id="@+id/tv_settings_msv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Master Volume"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_settings_se"
-        app:layout_constraintBottom_toBottomOf="parent">
-    </TextView>
-    <com.google.android.material.slider.Slider
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_settings_msv"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="10dp">
+        <TextView
+            android:id="@+id/tv_settings_bgm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Background Music"
+            android:textSize="24sp">
+        </TextView>
 
-    </com.google.android.material.slider.Slider>
-
+        <SeekBar
+            android:id="@+id/sb_background_music"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
