--- a/app/src/main/res/layout/activity_choosemap.xml
+++ b/app/src/main/res/layout/activity_choosemap.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -13,59 +14,15 @@
         android:text="Back"
         android:layout_margin="10dp">
     </Button>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Map 1"
-        android:textSize="32dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tv_cm_example">
-    </TextView>
-    <ImageView
-        android:id="@+id/tv_cm_example"
-        android:layout_width="380dp"
-        android:layout_height="380dp"
-        android:src="@drawable/example"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="70dp">
 
-    </ImageView>
-    <Button
-        android:id="@+id/btn_choosemap_choose"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Choose"
-        android:layout_marginBottom="100dp">
-    </Button>
-
-    <Button
-        android:layout_width="75dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="."
-        android:textSize="32dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginBottom="100dp">
-    </Button>
-
-    <Button
-        android:layout_width="75dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="."
-        android:textSize="32dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="100dp">
-    </Button>
+    <androidx.recyclerview.widget.RecyclerView
+        android:orientation="horizontal"
+        android:id="@+id/rv_buttons"
+        android:layout_width="match_parent"
+        android:layout_height="470dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_choosemap_back"
+        >
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 
