--- a/app/src/main/res/layout/activity_createmap.xml
+++ b/app/src/main/res/layout/activity_createmap.xml
@@ -4,12 +4,20 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/spacebackground"
+        />
+
     <TextView
         android:id="@+id/tv_gameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Create Map"
         android:textSize="50dp"
+        android:textColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/gl_createmap_map"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -21,6 +29,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_gameTitle"
         android:layout_margin="10dp"
         android:text="Click on a block to edit"
+        android:textColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
@@ -287,9 +296,12 @@
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content"
-        android:hint="Name of Map"
+        android:hint="Name of Map w/out Spaces"
         android:padding="10dp"
-        android:layout_margin="20dp"/>
+        android:textColorHint="@color/purple_200"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@color/white"/>
 
 
     <Button
@@ -300,7 +312,8 @@
         android:layout_gravity="left"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_createmap_nameofmap"
-        android:layout_margin="20dp"/>
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"/>
 
     <Button
         android:id="@+id/btn_createmap_save"
@@ -310,6 +323,7 @@
         android:layout_gravity="right"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_createmap_nameofmap"
-        android:layout_margin="20dp"/>
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
