--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/spacebackground"
+        />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,7 +29,8 @@
             android:layout_height="wrap_content"
             android:text="Space Travelers"
             android:textSize="60dp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:textColor="@color/white"/>
 
         <LinearLayout
             android:layout_width="match_parent"
