--- a/app/src/main/res/layout/activity_setuppage.xml
+++ b/app/src/main/res/layout/activity_setuppage.xml
@@ -3,16 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/spacebackground"
+        />
 
     <Button
         android:id="@+id/btn_setuppage_back"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
         android:text="Back"
-        android:textSize="12dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="20dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_setuppage_singleplayer"
@@ -20,6 +27,7 @@
         android:layout_height="wrap_content"
         android:text="Single Player"
         android:textSize="30dp"
+        android:textColor="@color/white"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/btn_setuppage_back"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -30,6 +38,7 @@
         android:id="@+id/tv_setuppage_numberofai"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:text="Number of AI"
         android:textSize="18dp"
         android:gravity="center"
@@ -75,6 +84,7 @@
         android:layout_height="wrap_content"
         android:text="Multiplayer"
         android:textSize="30dp"
+        android:textColor="@color/white"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/ll_setuppage_aichoice"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -87,6 +97,7 @@
         android:layout_height="wrap_content"
         android:text="Number of Players"
         android:textSize="18dp"
+        android:textColor="@color/white"
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@+id/tv_setuppage_multiplayer"
         app:layout_constraintLeft_toLeftOf="parent"
