--- a/app/src/main/res/layout/activity_setuppage.xml
+++ b/app/src/main/res/layout/activity_setuppage.xml
@@ -49,18 +49,21 @@
         android:layout_margin="20dp">
 
         <Button
+            android:id="@+id/btn_setuppage_ai1"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="1"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_setuppage_ai2"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="2"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_setuppage_ai3"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="3"
@@ -104,28 +107,27 @@
         android:layout_margin="20dp">
 
         <Button
+            android:id="@+id/btn_setuppage_mp1"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="1"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_setuppage_mp2"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="2"
             android:layout_margin="10dp"/>
 
         <Button
+            android:id="@+id/btn_setuppage_mp3"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="3"
             android:layout_margin="10dp"/>
 
-        <Button
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:text="4"
-            android:layout_margin="10dp"/>
+
     </LinearLayout>
     <TextView
         android:id="@+id/tv_setuppage_mapname"
