--- a/app/src/main/res/layout/block_data.xml
+++ b/app/src/main/res/layout/block_data.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="55dp"
+    android:layout_height="55dp"
+    android:layout_margin="10dp"
+    android:background="#00000000">
 
     <Button
         android:id="@+id/btn_block"
         android:tag=""
-        android:text=""
+        android:text="A"
         android:layout_height="55dp"
         android:layout_width="55dp"
-        android:layout_margin="10dp"
         />
 
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
